[package]
name = "leptos_image"
version = "0.2.0"
edition = "2021"
authors = ["Nico Burniske"]
description = "Static Image Optimizer for Leptos"
exclude = ["example/"]
keywords = ["leptos"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nicoburniske/leptos-image"

[dependencies]
leptos = { version = "0.7.4", default-features = false }
leptos_router = { version = "0.7.4", default-features = false }
leptos_meta = { version = "0.7.4", default-features = false }
leptos_axum = { version = "0.7.4", default-features = false, optional = true }

wasm-bindgen = "0.2"
web-sys = { version = "0.3", optional = true, features = ["HtmlImageElement"]}

tokio = { version = "1", features = ["rt-multi-thread", "rt", "fs"], optional = true }
axum = { version = "0.7", optional = true, features = ["macros"] }
tower = { version = "0.4", optional = true, features = ["util"] }
tower-http = { version = "0.5", features = ["fs"], optional = true }

image = { version = "0.24", optional = true}
webp = { version= "0.2", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.12"
thiserror = { version = "1", optional = true }
base64 = "0.21"
tracing = { version = "0.1", optional = true }
dashmap = { version = "5", optional = true }

[features]
ssr = [ 
    "leptos_meta/ssr" , "leptos/ssr",
    "dep:webp", "dep:image", 
    "dep:tokio", "dep:axum", "dep:tower", "dep:tower-http",
    "dep:tracing", "dep:dashmap", "dep:thiserror"
]
hydrate = [ "dep:web-sys","leptos/hydrate" ]

[dev-dependencies]
leptos_axum = "0.7.4"

[patch.crates-io]
leptos-node-ref = { git = "https://github.com/geoffreygarrett/leptos-utils", branch = "feature/any-node-ref" }
leptos-typed-fallback-show = { git = "https://github.com/geoffreygarrett/leptos-utils", branch = "feature/typed-fallback-show" }
radix-leptos-label = { git = "https://github.com/geoffreygarrett/radix", branch = "update/leptos-0.7-label" }
radix-leptos-primitive = { git = "https://github.com/geoffreygarrett/radix", branch = "update/leptos-0.7-primitive" }
radix-leptos-compose-refs = { git = "https://github.com/geoffreygarrett/radix", branch = "update/leptos-0.7-compose-refs" }
radix-leptos-context = { git = "https://github.com/geoffreygarrett/radix", branch = "update/leptos-0.7-context" }
radix-leptos-avatar = { git = "https://github.com/geoffreygarrett/radix", branch = "updates/leptos-0.7-avatar" }
radix-leptos-separator = { git = "https://github.com/geoffreygarrett/radix", branch = "update/leptos-0.7-separator" }
#radix-leptos-presence = { git = "https://github.com/geoffreygarrett/radix", branch = "update/leptos-0.7-presence" }
#leptos-maybe-callback = { git = "https://github.com/geoffreygarrett/leptos-utils", branch = "feature/maybe-callback" }

leptos-obfuscate = { git = "https://github.com/sebadob/leptos-obfuscate", branch = "main" }
leptos_image = { git = "https://github.com/geoffreygarrett/leptos-image", branch = "main" }
leptos-routable = { git = "https://github.com/geoffreygarrett/leptos-routable", branch = "main" }
